--- a/Sett1/G1/index_Livian.html
+++ b/Sett1/G1/index_Livian.html
@@ -12,36 +12,28 @@
     <main>
         <a href="#"><img src="https://images.pexels.com/photos/16264426/pexels-photo-16264426/free-photo-of-animale-carino-gattino-gatto.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Immagine gatto bengala">
         </a>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse elementum lorem et purus congue commodo. 
-        Maecenas bibendum iaculis dapibus. Donec vel mollis lectus, vitae consectetur sem. Phasellus gravida varius pulvinar. 
+        <p>Ciao a tutti, mi chiamo Milena, sono una ragazza di 21 anni ed abito a Padova. Ho scelto di frequentare una scuola professionale per diventare grafica pubblicitaria, ma alla fine dell'ultimo anno ho capito che non faceva per me. 
+            Da quando ho finito scuola ho fatto diversi lavori per dare una mano in famiglia, senza mai esserne soddisfatta al 100%. 
+            Solo da quest'anno mi sono avvicinata nel mondo della programmazione e ho imparato qualcosa da 'autodidatta' sul sito di CodeAcademy, fino a quando non ho trovato il corso attuale in cui ci troviamo tutti ora ed ho deciso di tuffarmi in questa nuova esperienza
+            perchè voglio fare sul serio ^^.
         </p>
-        <p>Pellentesque mattis ex sed gravida pharetra. Aenean sed venenatis arcu. Pellentesque venenatis maximus vulputate. 
-        Proin non lorem lectus. Duis efficitur semper rutrum. Donec quis consequat dui, vitae sagittis diam. 
-        Proin ligula lorem, semper a luctus id, rutrum vitae enim.
-        Ut ut congue elit. Maecenas finibus pulvinar purus, sit amet aliquam nunc sollicitudin id. Nulla facilisi. 
-        Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. 
-        Aenean quam quam, dictum eu felis eget, euismod venenatis magna. Sed efficitur rutrum suscipit. 
-        </p>
-        <p>Interdum et malesuada fames ac ante ipsum primis in faucibus. 
-        Sed faucibus molestie nisi, sit amet euismod nisi faucibus id. 
-        Nulla dignissim urna turpis non lacinia tortor dictum non. 
-        <a href="#">Proin faucibus sapien non laoreet viverra.</a> 
-        Phasellus nec felis eget turpis faucibus auctor. 
+        <p>Nel tempo libero mi piace fare yoga, andare in bici e passeggiare con la mia gattina.  
+        <a href="#">Se avessi profili social li aggiungerei qui.</a>  
         </p>
     <a href="https://github.com/mlivv">Github
     </a>
     <div>
         <ul>
         <p>Le mie competenze</p>
-        <li>Comp 1</li>
-        <li>Comp 2</li>
-        <li>Comp 3</li>
+        <li>Adobe Photoshop</li>
+        <li>Excel</li>
+        <li>Adobe Indesign</li>
     </ul>
     <ol>
         <p>Competenze da acquisire</p>
-        <li>Comp 1</li>
-        <li>Comp 2</li>
-        <li>Comp 3</li>
+        <li>Css</li>
+        <li>Html</li>
+        <li>Java script</li>
     </ol>
     </div>
     </main>
