--- a/Sett1/G1/Esercizio/index_Livian.html
+++ b/Sett1/G1/Esercizio/index_Livian.html
@@ -12,10 +12,7 @@
     <main>
         <a href="#"><img src="https://images.pexels.com/photos/16264426/pexels-photo-16264426/free-photo-of-animale-carino-gattino-gatto.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Immagine gatto bengala">
         </a>
-        <p>Ciao a tutti, mi chiamo Milena, sono una ragazza di 21 anni ed abito a Padova. Ho scelto di frequentare una scuola professionale per diventare grafica pubblicitaria, ma alla fine dell'ultimo anno ho capito che non faceva per me. 
-            Da quando ho finito scuola ho fatto diversi lavori per dare una mano in famiglia, senza mai esserne soddisfatta al 100%. 
-            Solo da quest'anno mi sono avvicinata nel mondo della programmazione e ho imparato qualcosa da 'autodidatta' sul sito di CodeAcademy, fino a quando non ho trovato il corso attuale in cui ci troviamo tutti ora ed ho deciso di tuffarmi in questa nuova esperienza
-            perchè voglio fare sul serio ^^.
+        <p>Ciao a tutti, mi chiamo Milena, sono una ragazza di 21 anni ed abito a Padova. Ho scelto di frequentare una scuola professionale per diventare grafica pubblicitaria, ma alla fine dell'ultimo anno ho capito che non faceva per me. Da quando ho finito scuola ho fatto diversi lavori per dare una mano in famiglia, senza mai esserne soddisfatta al 100%. Solo da quest'anno mi sono avvicinata nel mondo della programmazione e ho imparato qualcosa da 'autodidatta' sul sito di CodeAcademy, fino a quando non ho trovato il corso attuale in cui ci troviamo tutti ora ed ho deciso di tuffarmi in questa nuova esperienza perchè voglio fare sul serio ^^.
         </p>
         <p>Nel tempo libero mi piace fare yoga, andare in bici e passeggiare con la mia gattina.  
         <a href="#">Se avessi profili social li aggiungerei qui.</a>  
