--- a/S1/G5 - Progetto settimanale/index-desktop.html
+++ b/S1/G5 - Progetto settimanale/index-desktop.html
@@ -1,17 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="style-desktop.css" href="Esercizio/css/style-desktop.css">
-</head>
-<body>
+<html lang="it">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Corso Web Developer - Epicode school</title>
+    <link rel="stylesheet" href="Esercizio/css/style-desktop.css" />
+  </head>
+  <body>
     <header>
-        <figure>
-            <img src="Esercizio/images/logo.png" alt="logo epicode school" width="160" height="50"/>
-        </figure>
+      <figure>
+        <img
+          src="Esercizio/images/logo.png"
+          alt="logo epicode school"
+          width="160"
+          height="50"
+        />
+      </figure>
     </header>
-    
-</body>
+    <main>
+      <section>
+        <div class="testoPrincipale">
+          <h1>Corso Web Developer</h1>
+          <p>
+            Smetti di inseguire i titoli, inizia a lavorare. Mentre tutti
+            vogliono arricchire il CV, tu pensa ad arricchire le tue competenze.
+          </p>
+          <div class="button">
+            <fieldset>
+              <button type="button">PARTIAMO!</button>
+            </fieldset>
+          </div>
+        </div>
+        <div class="secondoBlocco">
+        
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
