--- a/S1/G5 - Progetto settimanale/index-mobile.html
+++ b/S1/G5 - Progetto settimanale/index-mobile.html
@@ -68,17 +68,20 @@
           <p>CEO, Epicode</p>
         </div>
       </section>
+
       <!-- ARTICLES -->
-      <article>
-        <div class="quadrati" id="ilTuoPc">
+
+      <section>
+        <article>
           <img src="Esercizio/images/foto1.jpg" alt="foto laptop" width="500" />
           <h3>Il tuo pc</h3>
           <p>
             Se vuoi diventare developer è l'unico strumento di cui hai bisogno.
           </p>
-        </div>
+        </article>
 
-        <div class="quadrati" id="imparaOra">
+
+        <article>
           <img
             src="Esercizio/images/foto2.jpg"
             alt="foto laptop socchiuso"
@@ -89,8 +92,10 @@
             Impara da chi diventerai tra qualche anno, e diventa una rockstar
             come loro.
           </p>
-        </div>
-        <div class="quadrati" id="lavoraSubito">
+        </article>
+
+
+        <article>
           <img
             src="Esercizio/images/foto3.jpg"
             alt="foto meeting"
@@ -98,8 +103,10 @@
           />
           <h3>Lavora subito</h3>
           <p>Sappiamo cosa vogliono le aziende, perchè lavoriamo con loro.</p>
-        </div>
-      </article>
+        </article>
+
+
+        </section>
     </main>
     <footer>
       <h2>Contattaci</h2>
