commit esercizio correzioni

--- a/S1/G5 - Progetto settimanale/index-mobile.html
+++ b/S1/G5 - Progetto settimanale/index-mobile.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Corso Web Developer - Epicode school</title>
-    
+
     <link rel="stylesheet" href="Esercizio/css/style.mobile.css" />
   </head>
   <body>
@@ -61,16 +61,16 @@
         <div class="sezioneCitazione">
           <h3>Epicode garantisce</h3>
           <blockquote>
-            <i>"3 mesi intensivi di corso che cambieranno radicalmente la tua
-              vita"</i>
+            <i
+              >"3 mesi intensivi di corso che cambieranno radicalmente la tua
+              vita"</i
+            >
           </blockquote>
           <p>Mario Rossi</p>
           <p>CEO, Epicode</p>
         </div>
       </section>
-
       <!-- ARTICLES -->
-
       <section>
         <article>
           <img src="Esercizio/images/foto1.jpg" alt="foto laptop" width="500" />
@@ -79,8 +79,6 @@
             Se vuoi diventare developer è l'unico strumento di cui hai bisogno.
           </p>
         </article>
-
-
         <article>
           <img
             src="Esercizio/images/foto2.jpg"
@@ -93,8 +91,6 @@
             come loro.
           </p>
         </article>
-
-
         <article>
           <img
             src="Esercizio/images/foto3.jpg"
@@ -104,15 +100,15 @@
           <h3>Lavora subito</h3>
           <p>Sappiamo cosa vogliono le aziende, perchè lavoriamo con loro.</p>
         </article>
-
-
-        </section>
+      </section>
     </main>
     <footer>
       <h2>Contattaci</h2>
 
       <div id="testofooter">
-        <address><i class="fa-solid fa-phone"></i><a href="tel">(+39) 11223456</a></address>
+        <address>
+          <i class="fa-solid fa-phone"></i><a href="tel">(+39) 11223456</a>
+        </address>
         <address>
           <a href="mailto:info@epicode.school">info@epicode.school</a>
         </address>
