--- a/S1/G5 - Progetto settimanale/index-mobile.html
+++ b/S1/G5 - Progetto settimanale/index-mobile.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Corso Web Developer - Epicode school</title>
-
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="Esercizio/css/style.mobile.css" />
   </head>
   <body>
@@ -107,15 +113,16 @@
 
       <div id="testofooter">
         <address>
-          <i class="fa-solid fa-phone"></i><a href="tel">(+39) 11223456</a>
+          <i class="fa-solid fa-phone"> </i><a href="tel">(+39) 11223456</a>
         </address>
         <address>
-          <a href="mailto:info@epicode.school">info@epicode.school</a>
+            <i class="fa-solid fa-envelope"></i> <a href="mailto:info@epicode.school">info@epicode.school</a>
         </address>
-        <address>Via Appia 1 - 00100 Roma (RM)</address>
+        <i class="fa-solid fa-location-dot"></i><address>Via Appia 1 - 00100 Roma (RM)
+        </address>
       </div>
 
-      <hr style="border: solid white 1px" ; width="250px" ; />
+      <hr style="border: solid white"; width="250px" ; />
 
       <p>&copy; 2021. Immagini di Pixabay.</p>
     </footer>
