--- a/S2/G2/compito/index.html
+++ b/S2/G2/compito/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="it">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Compito sett 2 giorno 2 JS</title>
-</head>
-<body>
-    
-
+  </head>
+  <body>
     <script src="D2.js"></script>
-</body>
+  </body>
 </html>
