--- a/S2/G3/app.html
+++ b/S2/G3/app.html
@@ -20,7 +20,16 @@
         </form>
         <br>
         <button type="button" id="verifica" onclick="eventHandler()">VERIFICA</button>
-        <h3 id="errore"></h3>
+        <h3 id="errore">&nbsp;</h3>
+    </div>
+
+    <div id="stampa">
+        <h3 id="mioNome">&nbsp;</h3>
+        <h3 id="miaVerifica">&nbsp;</h3>
+    </div>
+
+    <div id="descrizione">
+        <p><b>*</b>Questa applicazione legge nome e anno di nascita, verifica la maggiore o minore età e stampa il tutto a video</p>
     </div>
     <script src="assets/js/app.js"></script>
 </body>
