commit esercizi progetto settimanale

--- a/S2/G5 - Progetto settimanale/Amazon Page/indexCompito.html
+++ b/S2/G5 - Progetto settimanale/Amazon Page/indexCompito.html
@@ -1,25 +1,71 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Progetto settimanale 2</title>
     <link rel="stylesheet" href="assets/css/styleCompito.css">
 </head>
 <body>
-    <head>
-        <figure>
+    <header>
+        <!-- LOGO -->
+        <div id="logoAmazon">
             <img src="assets/images/logo.png" width="120" height="40">
+        </div>
+        <!-- SEARCH BAR -->
+        <div id="box1">
+            <p class="allineamento">All</p>
+            <p class="allineamento">Today's deals</p>
+            <p class="allineamento">Customer Service</p>
+            <p class="allineamento">Registry</p>
+            <p class="allineamento">Gift Cards</p>
+            <p class="allineamento">Sell</p>
+        </div>
+    </header>
+    <main>
+        <!-- BLOCCO ARANCIONE -->
+        <div class="allBox" id="shopAll">
+            <h5>Shop All Holiday Gift Cards</h5>
+        </div>
+        <!-- BLOCCO HOLIDAY GIFT GUIDES-->
+        <section class="allBox" id="holidayGift">
+            <h2>Holiday Gift Guides</h2>
+            <h4>Be a go-gifter</h4>
+        </section>
+        <!-- BLOCCO FIND THE PERFECT GIFT-->
+        <section class="allBox" id="findGift">
+            <!--TESTO-->
+            <div id="titoloGift">
+            <h3 class="allinPerfectgift">Find the perfect gift</h3>
+            <p class="allinPerfectgift">Shop now</p>
+            </div>
+            <!--IMMAGINI-->
+            <figure>
+                <img src="assets/images/img_1.jpg" id="img1" class="cards" width="280" height="300">
+                <img src="assets/images/img_2.jpg" id="img2" class="cards" width="280" height="300">
+                <img src="assets/images/img_3.jpg" id="img3" class="cards" width="280" height="300">
+                <img src="assets/images/img_4.jpg" id="img4" class="cards" width="280" height="300">
+            </figure>
+        </section>
+        <!--PLAY THE GIFTING GAME-->
+        <figure class="allBox" id="image01">
+            <img src="assets/images/img_9.png" alt="immagine di dispositivi gaming" width="1245" height="350">
+            <figcaption>Play the gifting game</figcaption>
+            <p>Shop gaming</p>
         </figure>
-        <nav id="sottointestazione">
-            <p>All</p>
-            <p>Today's deals</p>
-            <p>Customer Service</p>
-            <p>Registry</p>
-            <p>Gift cards</p>
-            <p>Sell</p>
-        </nav>
-    </head>
-
+        <figure class="allBox" id="image02">
+            <img src="assets/images/img_10.png" alt="immagine di dispositivi audio" width="1245" height="350">
+            <figcaption>The sound of cheer</figcaption>
+            <p>Shop Audio & Accessories</p>
+        </figure>
+    </main>
+    <footer>
+        <div id="backToTop">
+            <a href="#">Back to top</a>
+        </div>
+        <div id="logoAmazonFooter">
+            <img src="assets/images/logo.png" width="160" height="60">
+        </div>
+    </footer>
 </body>
 </html>
