agg esercizi progetto settimanale

--- a/S2/G5 - Progetto settimanale/Amazon Page/indexCompito.html
+++ b/S2/G5 - Progetto settimanale/Amazon Page/indexCompito.html
@@ -53,6 +53,7 @@
             <figcaption>Play the gifting game</figcaption>
             <p>Shop gaming</p>
         </figure>
+        <!--THE SOUND OF CHEER-->
         <figure class="allBox" id="image02">
             <img src="assets/images/img_10.png" alt="immagine di dispositivi audio" width="1245" height="350">
             <figcaption>The sound of cheer</figcaption>
