agg 2 esercizio prog sett

--- a/S2/G5 - Progetto settimanale/Amazon Page/indexCompito.html
+++ b/S2/G5 - Progetto settimanale/Amazon Page/indexCompito.html
@@ -68,5 +68,7 @@
             <img src="assets/images/logo.png" width="160" height="60">
         </div>
     </footer>
+
+    <!-- Prof ho fatto una stupidaggine, ho lasciato la pagina aperta a meta' schermo e ho lavorato tutto il tempo cosi, nel momento in cui ho aperto la pagina per intero mi si e' rovinato tutto DDDD: -->
 </body>
 </html>
