commit prog settimanale

--- a/S3/G3/index.html
+++ b/S3/G3/index.html
@@ -6,7 +6,13 @@
     <title>giorno 3</title>
 </head>
 <body>
-    
+    <h1>To do list</h1>
+    <input id="nuovaTask" type="text">
+    <button id="nuovaTaskBtn">Aggiungi alla lista</button>
+    <div id="toDo"></div>
+
+
+
     <script src="assets/js/script.js"></script>
 </body>
 </html>
