--- a/S2/G3/compito/index.html
+++ b/S2/G3/compito/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    
-
+    <h1 id="nomiPersonaggi"></h1>
+    <h1 id="persFemminili"></h1>
     <script src="D3.js"></script>
 </body>
 </html>
