commit progetto settimanale

--- a/S5/G3/index.html
+++ b/S5/G3/index.html
@@ -8,8 +8,17 @@
   </head>
   <body>
     <header>
-      <nav class="navBar">
+      <div class="containerNav">
         <div class="navBtns">
+          <div class="navBtnSingolo"><p>Our Honey</p></div>
+          <div class="navBtnSingolo"><p>Trace Honey</p></div>
+          <div class="navBtnSingolo">
+            <img src="./assets/imgs/logo.png" alt="logo" width="50" height="40">
+            <p>SHOP</p>
+          </div>
+          <div class="navBtnSingolo"><p>Facilities</p></div>
+          <div class="navBtnSingolo"><p>Contacts</p></div>
+        <!--  
           <button class="navBtnSingolo" class="piccoloBtn">Our Honey</button>
           <button class="navBtnSingolo" class="piccoloBtn">Trace Honey</button>
             
@@ -19,6 +28,7 @@
           <button class="navBtnSingolo" class="piccoloBtn">Facilities</button>
           <button class="navBtnSingolo" class="piccoloBtn">Contacts</button>
         </div>
+        -->
         <!--
             <ul>
                 <li class="piccoloBtn"><a href="">Our Honey</a></li>
@@ -28,7 +38,7 @@
                 <li class="piccoloBtn"><a href="">Contacts</a></li>
             </ul>
             -->
-      </nav>
+        </div>
     </header>
 
     <main>
@@ -37,7 +47,7 @@
         <div class="testoCard">
           <div class="tagProduct">
             <h4>100% Bio Honey</h4>
-            <p>Italian, not treated</p>
+            <small>Italian, not treated</small>
           </div>
           <div class="tagPrice">
             <p>7$/kg</p>
