--- a/S5/G5 - Progetto Settimanale/index.html
+++ b/S5/G5 - Progetto Settimanale/index.html
@@ -9413,29 +9413,174 @@
         <!-- SEZIONE ARTICOLI SECONDARI -->
         <section class="articoliSecondari">
           <div class="sezioneLateraleSinistra">
+            <!--ARTICOLO SECONDARIO 1-->
             <article class="singoloArticoloSecondario">
-              <div class="testoArticle">
+              <div class="testoArticleSecondario">
                 <div class="autoreArticoloSecondario">
-                  <img src="./assets/imgs/image06.png" height="20" width="20" />
-                  <p>Wesley Smits in JavaScript in Plain English</p>
+                  <img src="./assets/imgs/image07.jpeg" height="20" width="20" />
+                  <p>Robert Roy Britt</p>
                 </div>
                 <div class="titoloArticoloSecondario">
-                  <h4>How To Make Visual Studio Code Look Amazing</h4>
+                  <h4>How Old is Old?</h4>
                 </div>
                 <div class="introduzioneTesto">
                     <p>What we consider “old” changes dramatically with age, and our perspectives can be predictive of how well we age</p>
                 </div>
-                <div class="dataDiPubblicazione">
-                  <time>Oct 20 · 7 min read</time>
+                <div class="dataDiPubblicazioneTS">
+                  <p>Oct 27 · 5 min read · Aging</p>
                 </div>
               </div>
               <div>
                 <img
                   src="./assets/imgs/image08.jpeg"
-                  height="130"
-                  width="180"/>
+                  height="155"
+                  width="200"/>
               </div>
             </article>
+            <!--ARTICOLO SECONDARIO 2-->
+            <article class="singoloArticoloSecondario">
+                <div class="testoArticleSecondario">
+                  <div class="autoreArticoloSecondario">
+                    <img src="./assets/imgs/image09.jpeg" height="20" width="20" />
+                    <p>Taru Anniina Liikanen</p>
+                  </div>
+                  <div class="titoloArticoloSecondario">
+                    <h4>Is Taylor Swift Allowed to Speak About Fat?</h4>
+                  </div>
+                  <div class="introduzioneTesto">
+                      <p>Can you speak about your trauma if you don't look traumatized?</p>
+                  </div>
+                  <div class="dataDiPubblicazioneTS">
+                    <p>Oct 24 · 6 min read · Health</p>
+                  </div>
+                </div>
+                <div>
+                  <img
+                    src="./assets/imgs/image10.jpeg"
+                    height="155"
+                    width="200"/>
+                </div>
+              </article>
+              <!--ARTICOLO SECONDARIO 3-->
+            <article class="singoloArticoloSecondario">
+                <div class="testoArticleSecondario">
+                  <div class="autoreArticoloSecondario">
+                    <img src="./assets/imgs/image11.jpeg" height="20" width="20" />
+                    <p>David Rodenas, Ph. D.</p>
+                  </div>
+                  <div class="titoloArticoloSecondario">
+                    <h4>Don’t Screw Up, You Will Be Found Guilty</h4>
+                  </div>
+                  <div class="introduzioneTesto">
+                      <p>Software Engineer, yours is the right to produce high-quality work at all times, also the liability.</p>
+                  </div>
+                  <div class="dataDiPubblicazioneTS">
+                    <p>Oct 15 · 5 min read · Software Engineering </p>
+                  </div>
+                </div>
+                <div>
+                  <img
+                    src="./assets/imgs/image12.png"
+                    height="155"
+                    width="200"/>
+                </div>
+              </article>
+              <!--ARTICOLO SECONDARIO 4-->
+            <article class="singoloArticoloSecondario">
+                <div class="testoArticleSecondario">
+                  <div class="autoreArticoloSecondario">
+                    <img src="./assets/imgs/image13.png" height="20" width="20" />
+                    <p>Microsoft Design</p>
+                  </div>
+                  <div class="titoloArticoloSecondario">
+                    <h4>Leave No Trace</h4>
+                  </div>
+                  <div class="introduzioneTesto">
+                      <p>How product designers can break from the status quo and help our planet</p>
+                  </div>
+                  <div class="dataDiPubblicazioneTS">
+                    <p>Oct 25 · 11 min read · Sustainability</p>
+                  </div>
+                </div>
+                <div>
+                  <img
+                    src="./assets/imgs/image14.png"
+                    height="155"
+                    width="200"/>
+                </div>
+              </article>
+              <!--ARTICOLO SECONDARIO 5-->
+            <article class="singoloArticoloSecondario">
+                <div class="testoArticleSecondario">
+                  <div class="autoreArticoloSecondario">
+                    <img src="./assets/imgs/image15.jpeg" height="20" width="20" />
+                    <p>Scott H. Young</p>
+                  </div>
+                  <div class="titoloArticoloSecondario">
+                    <h4>Variability, Not Repetition, is the Key to Mastery</h4>
+                  </div>
+                  <div class="introduzioneTesto">
+                      <p>Bruce Lee is reported to have said, “I fear not the man who has practiced 10,000 kicks once, but the man who has practiced one kick 10,000...</p>
+                  </div>
+                  <div class="dataDiPubblicazioneTS">
+                    <p>Oct 26 · 7 min read · Health</p>
+                  </div>
+                </div>
+                <div>
+                  <img
+                    src="./assets/imgs/image16.jpg"
+                    height="155"
+                    width="200"/>
+                </div>
+              </article>
+              <!--ARTICOLO SECONDARIO 6-->
+            <article class="singoloArticoloSecondario">
+                <div class="testoArticleSecondario">
+                  <div class="autoreArticoloSecondario">
+                    <img src="./assets/imgs/image17.png" height="20" width="20" />
+                    <p>Paul A. DeStefanoin Human Parts</p>
+                  </div>
+                  <div class="titoloArticoloSecondario">
+                    <h4>What I Overheard as an Escape Room Actor</h4>
+                  </div>
+                  <div class="introduzioneTesto">
+                      <p>Lock a group of people in a room and you’ll witness some surprising confessions</p>
+                  </div>
+                  <div class="dataDiPubblicazioneTS">
+                    <p>Jan 18, 2020 · 6 min read · Experiences</p>
+                  </div>
+                </div>
+                <div>
+                  <img
+                    src="./assets/imgs/image18.jpeg"
+                    height="155"
+                    width="200"/>
+                </div>
+              </article>
+              <!--ARTICOLO SECONDARIO 7-->
+            <article class="singoloArticoloSecondario">
+                <div class="testoArticleSecondario">
+                  <div class="autoreArticoloSecondario">
+                    <img src="./assets/imgs/image19.jpeg" height="20" width="20" />
+                    <p>Kim Scott</p>
+                  </div>
+                  <div class="titoloArticoloSecondario">
+                    <h4>6 Steps for Setting Measurable Goals to Avoid “Productivity Paranoia”</h4>
+                  </div>
+                  <div class="introduzioneTesto">
+                      <p>With more people working in remote and hybrid environments than ever before, company, team and individual goals must be explicit and…</p>
+                  </div>
+                  <div class="dataDiPubblicazioneTS">
+                    <p>Oct 24 · 6 min read · Health</p>
+                  </div>
+                </div>
+                <div>
+                  <img
+                    src="./assets/imgs/image20.jpg"
+                    height="150"
+                    width="200"/>
+                </div>
+              </article>
           </div>
         </section>
       </div>
