--- a/S5/G5 - Progetto Settimanale/index.html
+++ b/S5/G5 - Progetto Settimanale/index.html
@@ -26,7 +26,7 @@
     </header>
 
     <main>
-      <div class="main">
+      <div class="main" id="hero">
         <div class="titolo">
           <h1>Stay curious.</h1>
           <h2>
