quasi ultime modifiche

--- a/S6/G5 - Progetto Settimanale Netflix/index.html
+++ b/S6/G5 - Progetto Settimanale Netflix/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./Netflix-assets/assets/css/style.css" />
   </head>
 
-  
+
   <body>
     <div class="ms-5 me-5">
       <header>
@@ -108,7 +108,7 @@
                   </button>
                   <ul class="dropdown-menu bg-dark">
                     <li>
-                      <a class="dropdown-item text-light" href="#"
+                      <a class="dropdown-item text-light" href="./indexProfilo.html"
                         >Manage Profiles</a
                       >
                     </li>
@@ -197,37 +197,37 @@
           <div class="carousel slide" data-ride="carousel">
 
             <div class="row mt-1">
-              <div class="col-md-2">
+              <div class="col-6 col-md-4 col-lg-2 mb-3">
                 <img
                   src="./Netflix-assets/assets/media/media0.webp"
                   width="100%"
                 />
               </div>
-              <div class="col-md-2">
+              <div class="col-6 col-md-4 col-lg-2 mb-3">
                 <img
                   src="./Netflix-assets/assets/media/media1.jpg"
                   width="100%"
                 />
               </div>
-              <div class="col-md-2">
+              <div class="col-6 col-md-4 col-lg-2 mb-3">
                 <img
                   src="./Netflix-assets/assets/media/media3.webp"
                   width="100%"
                 />
               </div>
-              <div class="col-md-2">
+              <div class="col-6 col-md-4 col-lg-2 mb-3">
                 <img
                   src="./Netflix-assets/assets/media/media4.jpg"
                   width="100%"
                 />
               </div>
-              <div class="col-md-2">
+              <div class="col-6 col-md-4 col-lg-2 mb-3">
                 <img
                   src="./Netflix-assets/assets/media/media5.webp"
                   width="100%"
                 />
               </div>
-              <div class="col-md-2">
+              <div class="col-6 col-md-4 col-lg-2 mb-3">
                 <img
                   src="./Netflix-assets/assets/media/media6.jpg"
                   width="100%"
@@ -243,37 +243,37 @@
             </div>
           </div>
           <div class="row mt-1">
-            <div class="col-md-2">
+            <div class="col-6 col-md-4 col-lg-2 mb-3">
               <img
                 src="./Netflix-assets/assets/media/media7.webp"
                 width="100%"
               />
             </div>
-            <div class="col-md-2">
+            <div class="col-6 col-md-4 col-lg-2 mb-3">
               <img
                 src="./Netflix-assets/assets/media/media8.webp"
                 width="100%"
               />
             </div>
-            <div class="col-md-2">
+            <div class="col-6 col-md-4 col-lg-2 mb-3">
               <img
                 src="./Netflix-assets/assets/media/media9.jpg"
                 width="100%"
               />
             </div>
-            <div class="col-md-2">
+            <div class="col-6 col-md-4 col-lg-2 mb-3">
               <img
                 src="./Netflix-assets/assets/media/media10.jpg"
                 width="100%"
               />
             </div>
-            <div class="col-md-2">
+            <div class="col-6 col-md-4 col-lg-2 mb-3">
               <img
                 src="./Netflix-assets/assets/media/media11.jpg"
                 width="100%"
               />
             </div>
-            <div class="col-md-2">
+            <div class="col-6 col-md-4 col-lg-2 mb-3">
               <img
                 src="./Netflix-assets/assets/media/media12.jpg"
                 width="100%"
@@ -288,37 +288,37 @@
             </div>
           </div>
           <div class="row mt-1">
-            <div class="col-md-2">
+            <div class="col-6 col-md-4 col-lg-2 mb-3">
               <img
                 src="./Netflix-assets/assets/media/media13.jpg"
                 width="100%"
               />
             </div>
-            <div class="col-md-2">
+            <div class="col-6 col-md-4 col-lg-2 mb-3">
               <img
                 src="./Netflix-assets/assets/media/media20.jpg"
                 width="100%"
               />
             </div>
-            <div class="col-md-2">
+            <div class="col-6 col-md-4 col-lg-2 mb-3">
               <img
                 src="./Netflix-assets/assets/media/media21.webp"
                 width="100%"
               />
             </div>
-            <div class="col-md-2">
+            <div class="col-6 col-md-4 col-lg-2 mb-3">
               <img
                 src="./Netflix-assets/assets/media/media22.webp"
                 width="100%"
               />
             </div>
-            <div class="col-md-2">
+            <div class="col-6 col-md-4 col-lg-2 mb-3">
               <img
                 src="./Netflix-assets/assets/media/media23.webp"
                 width="100%"
               />
             </div>
-            <div class="col-md-2">
+            <div class="col-6 col-md-4 col-lg-2 mb-3">
               <img
                 src="./Netflix-assets/assets/media/media18.jpg"
                 width="100%"
@@ -359,43 +359,43 @@
         </div>
 
         <div class="row mt-4">
-          <div class="col-3">
+          <div class="col-4 col-md-3">
             <p class="text-secondary">Audio and Subtitles</p>
           </div>
-          <div class="col-3">
+          <div class="col-4 col-md-3">
             <p class="text-secondary">Audio Description</p>
           </div>
-          <div class="col-3">
+          <div class="col-4 col-md-3">
             <p class="text-secondary">Help Center</p>
           </div>
-          <div class="col-3">
+          <div class="col-4 col-md-3">
             <p class="text-secondary">Gift Cards</p>
           </div>
-          <div class="col-3">
+          <div class="col-4 col-md-3">
             <p class="text-secondary">Media Center</p>
           </div>
-          <div class="col-3">
+          <div class="col-4 col-md-3">
             <p class="text-secondary">Investor Relations</p>
           </div>
-          <div class="col-3">
+          <div class="col-4 col-md-3">
             <p class="text-secondary">Jobs</p>
           </div>
-          <div class="col-3">
+          <div class="col-4 col-md-3">
             <p class="text-secondary">Terms of Use</p>
           </div>
-          <div class="col-3">
+          <div class="col-4 col-md-3">
             <p class="text-secondary">Privacy</p>
           </div>
-          <div class="col-3">
+          <div class="col-4 col-md-3">
             <p class="text-secondary">Legal Notices</p>
           </div>
-          <div class="col-3">
+          <div class="col-4 col-md-3">
             <p class="text-secondary">Cookie Preferences</p>
           </div>
-          <div class="col-3">
+          <div class="col-4 col-md-3">
             <p class="text-secondary">Corporate Information</p>
           </div>
-          <div class="col-3">
+          <div class="col-4 col-md-3">
             <p class="text-secondary">Contact Us</p>
           </div>
         </div>
