commit quasi finito

--- a/S6/G5 - Progetto Settimanale Netflix/indexProfilo.html
+++ b/S6/G5 - Progetto Settimanale Netflix/indexProfilo.html
@@ -24,7 +24,7 @@
     </header>
 
     <main id="mainPaginaProfilo">
-      <div id="contMain">
+      <div id="contMainProfilo">
         <div class="row text-center mt-5">
           <div class="col-12">
             <h1 class="text-light display-2">Edit Profile</h1>
@@ -32,14 +32,14 @@
           <hr class="text-light" id="hrMainProfilo" />
         </div>
         <div class="row">
-          <div class="col-4">
+          <div class="col-12 col-md-4 pb-4">
             <img
               src="./Netflix-assets/assets/avatar.png"
               width="100%"
               alt="immagine profilo"
             />
           </div>
-          <div class="col-8">
+          <div class="col-12 col-md-8">
             <form>
               <!--nome-->
               <input
@@ -123,7 +123,7 @@
       </div>
     </main>
     <footer id="footerProfilo">
-      <div class="d-flex justify-content-between mt-1 mb-5">
+      <div class="d-flex justify-content-between mt-1 mb-5" id="btnFooterProfilo">
         <button class="btn text-dark border border-0 bg-light">SAVE</button>
         <button class="btn text-secondary border border-secondary">
           CANCEL
