commit finale anche se non concluso

--- a/S7/G5/details.html
+++ b/S7/G5/details.html
@@ -21,7 +21,8 @@
         <div class="container mt-5">
             <div class="row" id="row">
                 <div class="col-10">
-                    <form>
+                    <form id="form">
+                        <!--
                         <div class="form-group">
                             <label for="inputId">Id</label>
                             <input type="text" class="form-control" id="productBrand" name="_id">
@@ -41,7 +42,8 @@
                         <div class="form-group">
                             <label for="inputPrice">Price</label>
                             <input type="text" class="form-control" id="inputPrice" name="price">
-                        </div>
+                        </div>-->
+                        </form>
                 </div>
             </div>
         </div>
